--- a/Yasho_App/package.json
+++ b/Yasho_App/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "react": "^18.3.1",
